fix sidebar spacing

--- a/frontend/css/admin.css
+++ b/frontend/css/admin.css
@@ -8388,9 +8388,6 @@
  .sidebar .nav-item {
      position: relative;
 }
- .sidebar .nav-item:last-child {
-     margin-bottom: 1rem;
-}
  .sidebar .nav-item .nav-link {
      text-align: center;
      padding: 0.75rem 1rem;
@@ -8455,7 +8452,7 @@
      width: 2.5rem;
      height: 2.5rem;
      text-align: center;
-     margin-bottom: 1rem;
+     margin: 1rem;
      cursor: pointer;
 }
  .sidebar #sidebarToggle::after {
@@ -8500,11 +8497,11 @@
      display: none;
 }
  .sidebar hr.sidebar-divider {
-     margin: 0 1rem 1rem;
+     margin: 0 1rem;
 }
  .sidebar .sidebar-heading {
      text-align: center;
-     padding: 0 1rem;
+     padding: 1rem 1rem 0;
      font-weight: 800;
      font-size: 0.65rem;
 }
@@ -8618,9 +8615,6 @@
     }
      .sidebar.toggled .nav-item .collapse, .sidebar.toggled .nav-item .collapsing {
          margin: 0;
-    }
-     .sidebar.toggled .nav-item:last-child {
-         margin-bottom: 1rem;
     }
      .sidebar.toggled .nav-item .nav-link {
          text-align: center;
